--- a/nextjs13-firstproject/app/components/NavicationBar/NavigationBar.module.scss
+++ b/nextjs13-firstproject/app/components/NavicationBar/NavigationBar.module.scss
@@ -1,27 +1,47 @@
+.NavigationBarComponent{
+    position: static;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: gray;
+    height: 48px;
+    padding: 25px 50px;
+}
+
 .NavBar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
 }
 
-.NavBarElement{
+.NavBarElement {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    transition: transform 0.9s ease;
+    border-radius: 5px;
+}
+
+.NavBarElement:hover{
+    transition: transform 0.7s ease;
+    transform: scale(1.2);
+    border-radius: 15px;
+}
+
+.NavBarLink {
     text-decoration: none;
-    border: 1px solid black;
+    display: block;
+    background-color: #f1f1f1;
+    color: #000;
+    padding: 8px 0 8px 16px;
+    transition: transform 0.7s ease;
+    padding-right: 20px;
     border-radius: 5px;
 }
   
-.NavBarLink {
-    padding: 0 1rem;
-    color: green;
-    font-size: 1.5rem;
-    font-weight: 600;
-    transition: all 0.2s ease-in-out;
-}
-  
 .NavBarLink:hover {
-    color: green;
-    transition: all 0.2s ease-in-out;
+    background-color: #555;
+    color: white;
+    transform: scale(1.2);
+    border-radius: 15px;
 }
-  
+
